[gd_scene load_steps=3 format=3 uid="uid://dceck22wqplq6"]

[ext_resource type="Script" uid="uid://c68qxtkaxb35w" path="res://scenes/main/level_select.gd" id="1_vbst8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tntlg"]
size = Vector2(128, 128)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbst8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Select Level:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="Level1" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_tntlg")

[node name="Level2" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_tntlg")

[node name="Level3" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_tntlg")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
