extends Control


func _on_back_button_pressed() -> void:
	SceneManager.change_to("main_menu")


func _on_level_1_pressed() -> void:
	SceneManager.change_to("level")


func _on_level_2_pressed() -> void:
	SceneManager.change_to("level")


func _on_level_3_pressed() -> void:
	SceneManager.change_to("level")
